--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   },
   "dependencies": {
     "@types/react": "^16.9.56",
-    "firebase": "^8.0.2",
-    "firebase-admin": "^11.2.0",
+    "firebase": "^9.9.0",
+    "firebase-admin": "9.4.0",
     "next": "10",
     "nookies": "^2.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "typescript": "^4.0.5"
+    "typescript": "^4.8.4"
   }
 }
